Disable renderToAssociatedSink by default.

This flag was actually not working due to a bug. Once that bug was fixed, it
apparently triggered another bug in the code that selects associated sinks with
some specific audio adapters that create multiple output devices.

This is a simple temporary fix so that the original behavior is
restored while we fix the actual underlying bug.

If this fix works, it will have to be merged into beta and maybe stable.

BUG=604523

Review-Url: https://codereview.chromium.org/1956023003
Cr-Commit-Position: refs/heads/master@{#392275}

Former-commit-id: db0441537a40d29d9873fe3a7bba20394d1866cd