content/renderer/media/user_media_client_impl.cc
@@ -219,7 +219,6 @@ void UserMediaClientImpl::requestUserMedia(
       controls.audio.requested = true;
       // Check if this input device should be used to select a matching output
       // device for audio rendering.
-      enable_automatic_output_device_selection = true;  // On by default.
       GetConstraintValueAsBoolean(
           user_media_request.audioConstraints(),
           &blink::WebMediaTrackConstraintSet::renderToAssociatedSink,
